Bug 168647 - Slow to copy cell ranges with complex charts (Windows-only)
Summary: Slow to copy cell ranges with complex charts (Windows-only)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
25.2.6.2 release
Hardware: All Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.8.0
Keywords: perf
Depends on:
Blocks: Cut-Copy Performance
  Show dependency treegraph
 
Reported: 2025-10-01 18:18 UTC by toyoil
Modified: 2026-02-23 19:59 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Shows the task manger (13.54 KB, image/jpeg)
2025-10-01 18:22 UTC, toyoil
Details
libreOfice Calc data file (464.71 KB, application/vnd.oasis.opendocument.spreadsheet)
2025-10-03 17:18 UTC, toyoil
Details
Sample file with unique chart names. (464.47 KB, application/vnd.oasis.opendocument.spreadsheet)
2025-10-03 21:43 UTC, m_a_riosv
Details

Note You need to log in before you can comment on or make changes to this bug.
Description toyoil 2025-10-01 18:18:36 UTC
Description:
When using Strg-C for copy LibreOffice didn't get any response and must be removed via task manager in Windows 10

Steps to Reproduce:
1. open cal with several tables
2. select some fields to be copied and use Strg-C
3. 

Actual Results:
runnung circle is shown and no further action is possible in libreoffice calc.

Expected Results:
Nothing, no reaction from libreoffice, only way to go out -> task manager


Reproducible: Always


User Profile Reset: Yes

Additional Info:
teh eselect field should be stored in memory and shaould be recalled later to be coped in other field.
Comment 1 toyoil 2025-10-01 18:22:07 UTC
Created attachment 203085 [details]
Shows the task manger
Comment 2 m_a_riosv 2025-10-01 21:32:37 UTC
Please paste here the information on Menu/Help/About LibreOffice (There is an icon to copy)

Do you have a clipboard manager installed?
Comment 3 toyoil 2025-10-03 12:48:27 UTC
No clipboard manager installed.

If necessary I can provide the data file to reproduce the bug.
Comment 4 m_a_riosv 2025-10-03 12:53:04 UTC
Then, please attach it.
Comment 5 toyoil 2025-10-03 17:18:24 UTC
Created attachment 203132 [details]
libreOfice Calc data file

The attachesd file does not allow copy and past of selected fields.

E.g. I want to copy AA240-AA256 to AB240-AB256 in "Jahrestabellen". Regardless which way I tried the program doesn't respond.
Comment 6 m_a_riosv 2025-10-03 21:43:18 UTC
Created attachment 203133 [details]
Sample file with unique chart names.

Seems that some Chart recalculation is triggered, or I don't know if it is normal, about 20 seconds in my case, after that it works fine.
A lot of graphics with complex data ranges.
As the graphics are deleted one by one, saved, and reopened, the waiting time is reduced.
There are several graphics with the same name. Change some graphic names to make them unique, which reduces the time to about 12 seconds for the first copy.

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 708abf24664a9a1aaeac452bcc8436026030e74e
CPU threads: 16; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded
Comment 7 toyoil 2025-10-05 11:52:46 UTC
Thank you for the investigation.

Is a response time of 20 seconds acceptable?

I opened the docoument again and now I could copy the data as expected but in general the response time is long, very long. Any action needs patience.

Is that related to the age of my laptop or is that the standard behaviour of LibreOffice Calc?
Comment 8 m_a_riosv 2025-10-05 23:28:21 UTC
(In reply to toyoil from comment #7)
> Thank you for the investigation.
> 
> Is a response time of 20 seconds acceptable?
> 
Maybe, as explained there are a lot of complex charts.
Comment 9 toyoil 2025-10-06 11:31:46 UTC
Even if there are several complex charts, the respomse time should be much shorter.

In this case LibreOffice Calc cannot replace Excel. There I don't see such problems. Sorry, I cannot recommend LibreOffice Calc to my friends.

I deleted step by step the charts and the response time was better, but when storing the file again it takes also a imacceptable time.
Comment 10 Buovjaga 2026-01-23 10:58:11 UTC
(In reply to toyoil from comment #5)
> Created attachment 203132 [details]
> libreOfice Calc data file
> 
> The attachesd file does not allow copy and past of selected fields.
> 
> E.g. I want to copy AA240-AA256 to AB240-AB256 in "Jahrestabellen".
> Regardless which way I tried the program doesn't respond.

The copying of AA240:AA256 seems much slower on Windows (11 secs) than on Linux (2 secs).

Arch Linux 64-bit
Version: 26.8.0.0.alpha0+ (X86_64)
Build ID: e7edd94565e8dd323395ec316c482ec32f14638c
CPU threads: 8; OS: Linux 6.18; UI render: default; VCL: gtk3
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: CL threaded
Built on 23 January 2026
Comment 11 Commit Notification 2026-02-19 06:01:50 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/55d8d9f907e07f241df0c6328335d01cbf96d5f6

tdf#168647 speed up copy of DataTable chart cells

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2026-02-20 16:45:10 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/21c09b87dbebd38fff8efb7f70b1a16e9b8aa5df

tdf#168647 speed up copy of DataTable chart cells (2)

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 toyoil 2026-02-23 14:10:29 UTC
I see sdome improvements, maybe the problem is also located in my old laptop.
Thank you
Comment 14 Buovjaga 2026-02-23 19:59:50 UTC
The last commit msg says "Takes the copy time from 8s to 4s for me." and I confirm I get 4.7 secs stopwatch time now.

Version: 26.8.0.0.alpha0+ (X86_64)
Build ID: 680(Build:0)
CPU threads: 2; OS: Windows 11 X86_64 (build 26200); UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded