tdf#168647 speed up copy of DataTable chart cells

Apply properties in bulk, rather than one at a time.

Takes the copy time from 12s to 8s for me.

Change-Id: Ie341a4a7e84ac3672b220ab846ae453352fd0d71
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/199623
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Tested-by: Jenkins
(cherry picked from commit 55d8d9f907e07f241df0c6328335d01cbf96d5f6)
Reviewed-on: https://gerrit.collaboraoffice.com/c/core/+/373
Reviewed-by: Noel Grandin <noel.grandin@collabora.com>
Tested-by: Jenkins CPCI <releng@collaboraoffice.com>